Bug 789706 part.1 Create native caret over our caret when ITextStoreACP::GetTextExt() is called during composition r=emk